# penx

./: .env  .prettierrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json  shiny-nails-whisper.md
.github/workflows/: release.yml  tauri-ci.yml
apps/believer/: package.json
apps/blog/: package.json
apps/bounty/: package.json
apps/desktop/: .env  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-v2/: package.json
apps/desktop-v2/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-v2/src-tauri/capabilities/: default.json
apps/desktop-v2/src-tauri/src/: lib.rs  menu.rs
apps/desktop/src/: App.tsx  MainApp.tsx  custom-types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  server.rs  tray.rs  util.rs  utils.rs  watcher.rs
apps/desktop/src-tauri/src/util/: icons.rs
apps/docs/: custom.css  theme.config.tsx
apps/docs/bak/: index.mdx
apps/docs/pages/: _app.tsx  _meta.json  index.mdx
apps/extension/: next.config.js  package.json
apps/extension/src/: command.scss
apps/home/: .env  next.config.mjs  package.json
apps/ink/: package.json
apps/mobile/: next.config.mjs  package.json
apps/protocol/: package.json
apps/protocol/deploy/: deployConfigure.ts
apps/protocol/utils/: deploy.ts  deployFixture.ts
apps/web/: next.config.mjs  package.json
apps/web/src/: middleware.ts
apps/whitepaper/: theme.config.tsx
apps/whitepaper/pages/: _meta.json  index.md
apps/whitepaper/pages.bak/: wp.md
extension-samples/base64/: manifest.json  package.json
extension-samples/base64/src/: base64.ts  decode.ts  encode.ts
extension-samples/counter/: manifest.json  package.json
extension-samples/counter/src/: index.ts
extension-samples/custom-ui-react/: README.md  manifest.json  package.json
extension-samples/custom-ui-react/extension-react-example/: manifest.json  package.json
extension-samples/custom-ui-react/extension-template-react/: manifest.json  package.json
extension-samples/custom-ui-react/github-trending/: manifest.json  package.json
extension-samples/custom-ui-react/hacker-news/: manifest.json  package.json
extension-samples/custom-ui-solid/: README.md  manifest.json  package.json
extension-samples/custom-ui-solid/extension-template-solid/: package.json
extension-samples/custom-ui-svelte/: README.md  manifest.json  package.json
extension-samples/custom-ui-svelte/extension-template-svelte/: manifest.json  package.json
extension-samples/custom-ui-vue/: manifest.json  package.json
extension-samples/custom-ui-vue/extension-template-vue/: package.json
extension-samples/extension-react-example/: manifest.json  package.json
extension-samples/extension-react-example/src/: count.command.tsx  detail.command.tsx  form.command.tsx  github-trending.command.tsx  list.command.tsx  todos.command.tsx
extension-samples/extension-template-react/: manifest.json  package.json
extension-samples/extension-template-solid/: manifest.json
extension-samples/extension-template-svelte/: manifest.json  package.json
extension-samples/extension-template-vue/: manifest.json  package.json
extension-samples/free-style-ui/: manifest.json  package.json
extension-samples/free-style-ui/src/: index.tsx
extension-samples/github-trending/: manifest.json  package.json
extension-samples/hacker-news/: manifest.json  package.json
extension-samples/hello-word/: manifest.json  package.json
extension-samples/mix/: manifest.json
extension-samples/render-api-demo/: manifest.json  package.json
extension-samples/run-apple-script/: manifest.json  package.json
extensions/bidirectional-link/: package.json
extensions/block-selector/: package.json
extensions/check-list/: package.json
extensions/database/: package.json
extensions/divider/: package.json
extensions/heading/: package.json
extensions/link/: package.json
extensions/paragraph/: package.json
extensions/table/: package.json
extensions/word-count/: package.json
external-packages/api/: CHANGELOG.md  package.json  rollup.config.js  tsconfig.json
external-packages/cli/: CHANGELOG.md  package.json
external-packages/penx/: package.json
external-packages/preset-ui/: CHANGELOG.md  README.md  package.json  tsconfig.json
external-packages/react/: CHANGELOG.md  package.json  tailwind.config.js
external-packages/worker-ui/: package.json  tsconfig.json
(+435 files in other folders)
