[package]
name = "penx"
version = "0.3.28"
description = "Your personal database"
authors = ["0xZion"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"

rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [
  "os-all",
  "dialog-all",
  "shell-all",
  "notification-all",
  "window-all",
  "fs-all",
  "http-all",
  "macos-private-api",
  "path-all",
  "global-shortcut-all",
  "protocol-asset",
  "system-tray",
  "devtools",
] }
open = "4.1.0"
tauri-plugin-clipboard = "0.6.10"
window-shadows = "0.2.2"
window-vibrancy = "0.4.0"
auto-launch = "0.4.0"
rust_search = "2.1.0"
plist = "1"
strsim = "0.10.0"
directories = "4.0.1"
smartcalc = { git = "https://github.com/ParthJadhav/smartcalc", branch = "stable" }
chrono-tz = { version = "0.6.1", default-features = false }
num-format = { version = "0.4", features = ["with-system-locale"] }
localzone = "0.2.0"
sys-locale = "0.2.3"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


# MacOS
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[dependencies.chrono]
version = "0.4"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
